
+ Enhancements

- jEdit plugin central will be moved to SourceForge soon. To make the
  transition easier, the plugin manager has been updated to use the
  SourceForge URL to receive plugin info

+ Bug Fixes

- Another attempt to fix the 'async requests executed twice' bug (since 2.5pre6)
- The help viewer would not work properly after being closed and reopened
  (since 2.5pre7)

* Version 2.5pre7

+ Bug Fixes

- WorkThread class no longer prints debugging messages as errors
  (since 2.5pre6)
- Delete line didn't work properly if the buffer only had two lines, both
  empty
- Fixed possible ArrayIndexOutOfBounds in select-paragraph command
- Fixed minor problem with join-lines action
- 'Select Line Range' would print an exception if invalid line numbers were
  entered
- Geometry of search & replace dialog box was only saved if the user
  clicked the 'cancel' button
- Asynchronous work requests could be executed twice (since 2.5pre6)
- Fixed incorrect behaviour of home/end keys on lines which only
  contained whitespace (since 2.5pre5)

* Version 2.5pre6

+ Enhancements

- Caret register code is now more efficent

+ Bug Fixes

- Initial size of plugin download progress dialog box was wrong
- 'Replace All' with the directory file set didn't work
- By not specifying a 'To:' field, the 'Send' command could trigger anti-spam
  filters
- 'Latest Version' plugin could throw a NoSuchMethodError
- Home/end keys would behave incorrectly if smart home/end was disabled
  (since 2.5pre5)
- End key could throw an exception (since 2.5pre5)
- Plugin manager didn't show newly installed JARs in list (since 2.5pre3)
- WorkThread.waitForRequests() had a subtle bug, which only manifested
  when doing a replace all with the directory file set (since 2.5pre1)
- Possible fix for bug where keys pressed in the 'find' field would be
  forwarded to the text area also

* Version 2.5pre5

+ New Features

- Improved home/end commands; they now go to the first/last non-whitespace